Revert "fix(table): updated expandable to animate visibility (#7537)"
This reverts commit a8e244718aaa62f4fc79b860514cd7a21e51b811.

--- a/src/patternfly/components/Table/table-expandable-row-content.hbs
+++ b/src/patternfly/components/Table/table-expandable-row-content.hbs
@@ -1,8 +1,4 @@
-<div class="{{pfv}}table__expandable-row-content
-  {{setModifiers
-    table-expandable-row-content--HasNoBackground="pf-m-no-background"
-    table-expandable-row-content--modifier=table-expandable-row-content--modifier
-  }}"
+<div class="{{pfv}}table__expandable-row-content{{#if table-expandable-row-content--modifier}} {{table-expandable-row-content--modifier}}{{/if}}"
   {{#if table-expandable-row-content--attribute}}
     {{{table-expandable-row-content--attribute}}}
   {{/if}}>
