--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -123,6 +123,8 @@
   --#{$table}__expandable-row--TransitionDuration--expand--fade: var(--pf-t--global--motion--duration--fade--default);
   --#{$table}__expandable-row--TransitionDuration--collapse--slide: 0s;
   --#{$table}__expandable-row--TransitionDuration--collapse--fade: var(--pf-t--global--motion--duration--fade--short);
+  --#{$table}__expandable-row--TransitionDuration--slide: var(--#{$table}__expandable-row--TransitionDuration--collapse--slide);
+  --#{$table}__expandable-row--TransitionDuration--fade: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
   --#{$table}__expandable-row--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
   --#{$table}__expandable-row--Opacity: 0;
   --#{$table}__tbody--m-expanded__expandable-row--Opacity: 1;
@@ -592,57 +594,6 @@
   .#{$button} .#{$table}__sort-indicator {
     --#{$table}__sort-indicator--MarginInlineStart: 0;
   }
-
-  // stylelint-disable max-nesting-depth, selector-max-class
-  &.pf-m-animate-expand {
-    > .#{$table}__tbody {
-      > .#{$table}__expandable-row {
-        display: revert;
-        visibility: hidden;
-        opacity: var(--#{$table}__expandable-row--Opacity);
-        transition-delay: 0s, 0s, var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
-        transition-timing-function: var(--#{$table}__expandable-row--TransitionTimingFunction);
-        transition-duration: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--slide), 0s;
-        transition-property: opacity, translate, visibility;
-        translate: 0 var(--#{$table}__expandable-row--TranslateY);
-
-        &[hidden] {
-          display: revert;
-        }
-
-        &.pf-m-expanded {
-          visibility: visible;
-          opacity: var(--#{$table}__tbody--m-expanded__expandable-row--Opacity);
-          transition-delay: 0s;
-          transition-duration: var(--#{$table}__expandable-row--TransitionDuration--expand--fade), var(--#{$table}__expandable-row--TransitionDuration--expand--slide), 0s, 0s;
-          translate: 0 var(--#{$table}__tbody--m-expanded__expandable-row--TranslateY);
-
-          > :is(.#{$table}__td, .#{$table}__th) {
-            > .#{$table}__expandable-row-content {
-              max-height: 99999px;
-            }
-          }
-        }
-
-        &:not(.pf-m-expanded) {
-          > :is(.#{$table}__td, .#{$table}__th) {
-            &,
-            > .#{$table}__expandable-row-content {
-              padding: 0;
-              overflow: hidden;
-              transition-delay: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
-              transition-property: padding, max-height, overflow;
-            }
-
-            > .#{$table}__expandable-row-content {
-              max-height: 0;
-            }
-          }
-        }
-      }
-    }
-  }
-  // stylelint-enable max-nesting-depth, selector-max-class
 }
 
 // - Table truncate - Table wrap - Table nowrap - Table fit content - Table wrap - Table break word
@@ -1034,23 +985,22 @@
 .#{$table}__expandable-row {
   position: relative;
   border-block-end: 0 solid transparent;
+  opacity: var(--#{$table}__expandable-row--Opacity);
+  transition-timing-function: var(--#{$table}__expandable-row--TransitionTimingFunction);
+  transition-duration: var(--#{$table}__expandable-row--TransitionDuration--fade), var(--#{$table}__expandable-row--TransitionDuration--slide), var(--#{$table}__expandable-row--TransitionDuration--fade);
+  transition-property: opacity, translate, display;
+  transition-behavior: allow-discrete;
+  translate: 0 var(--#{$table}__expandable-row--TranslateY);
 
-  // Remove top padding from regular expandable
-  > .#{$table}__th,
-  > .#{$table}__td {
-    padding-block-start: 0;
-  }
-
-  // Add padding back to compound expandable
-  .#{$table}__control-row ~ & {
+  @at-root :not(.#{$table}__control-row) ~ .#{$table}__expandable-row {
     > .#{$table}__th,
     > .#{$table}__td {
-      padding-block-start: var(--#{$table}--cell--PaddingBlockStart);
+      padding-block-start: 0;
     }
   }
 
-  .#{$table}__td,
-  .#{$table}__th {
+  td:where(.#{$table}__td),
+  th:where(.#{$table}__th) {
     &.pf-m-no-padding {
       padding-block-start: 0;
       padding-block-end: 0;
@@ -1059,7 +1009,6 @@
 
       .#{$table}__expandable-row-content {
         padding: 0;
-        border-radius: 0;
       }
     }
   }
@@ -1072,16 +1021,20 @@
     padding-inline-end: var(--#{$table}__expandable-row-content--PaddingInlineEnd);
     background-color: var(--#{$table}__expandable-row-content--BackgroundColor);
     border-radius: var(--#{$table}__expandable-row-content--BorderRadius);
-
-    &.pf-m-no-background {
-      background-color: transparent;
-    }
   }
 
   // - Table expandable row content expanded
   &.pf-m-expanded {
     border-block-end-color: var(--#{$table}__expandable-row--m-expanded--BorderBlockEndColor);
     border-block-end-width: var(--#{$table}--border-width--base);
+    opacity: var(--#{$table}__tbody--m-expanded__expandable-row--Opacity);
+    transition-duration: var(--#{$table}__expandable-row--TransitionDuration--expand--fade), var(--#{$table}__expandable-row--TransitionDuration--expand--slide), var(--#{$table}__expandable-row--TransitionDuration--expand--fade);
+    translate: 0 var(--#{$table}__tbody--m-expanded__expandable-row--TranslateY);
+
+    @starting-style {
+      opacity: var(--#{$table}__expandable-row--Opacity);
+      translate: 0 var(--#{$table}__expandable-row--TranslateY);
+    }
   }
 
   &:not(.pf-m-expanded) {
@@ -1092,10 +1045,6 @@
   tr:last-child {
     border-block-end: 0;
   }
-}
-
-.#{$table}__tr:has(~ .#{$table}__expandable-row) {
-  border-block-end: 0;
 }
 
 // - Table compact
@@ -1187,7 +1136,7 @@
     // - Table tbody table control row
     .#{$table}__control-row {
       background-color: var(--#{$table}__control-row--BackgroundColor);
-      border-block-end: 0;
+      border-block-end: var(--#{$table}__control-row--BorderBlockEndWidth) solid var(--#{$table}__control-row__tbody--BorderBlockEndColor);
     }
   }
 }
