--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -188,7 +188,7 @@
   &.pf-m-animate-expand {
     --#{$table}__expandable-row--Display: block;
 
-    > .#{$table}__tbody > .#{$table}__expandable-row:where(:nth-child(n+2)) {
+    > .#{$table}__tbody > .#{$table}__expandable-row {
       &:not(.pf-m-expanded) {
         > :is(.#{$table}__td, .#{$table}__th) {
           &[data-label]::before {
@@ -218,7 +218,7 @@
   // Standard table row (non-expandable)
   // exclude expandable rows
   // - Table grid tr not expandable row
-  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row:nth-child(n+2)) {
+  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
     display: grid;
     grid-template-columns: 1fr;
     height: auto;
@@ -361,7 +361,7 @@
   }
 
   // - Table grid expandable row
-  .#{$table}__expandable-row:where(:nth-child(n+2)) {
+  .#{$table}__expandable-row {
     --#{$table}--cell--responsive--PaddingBlockStart: 0;
     --#{$table}--cell--responsive--PaddingInlineEnd: 0;
     --#{$table}--cell--responsive--PaddingBlockEnd: 0;
@@ -456,7 +456,7 @@
 
   // Set defaults
   tr:where(.#{$table}__tr):not(.#{$table}__expandable-row),
-  &.pf-m-animate-expand > .#{$table}__tbody > tr:where(.#{$table}__tr):not(.#{$table}__expandable-row:nth-child(n+2)) {
+  &.pf-m-animate-expand > .#{$table}__tbody > tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
     .#{$table}__toggle,
     .#{$table}__check,
     .#{$table}__favorite,
