--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -604,59 +604,56 @@
 
       > .#{$table}__expandable-row {
         display: var(--#{$table}__expandable-row--Display, revert);
+        visibility: hidden;
+        opacity: var(--#{$table}__expandable-row--Opacity);
+        transition-delay: 0s, 0s, var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
+        transition-timing-function: var(--#{$table}__expandable-row--TransitionTimingFunction);
+        transition-duration: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--slide), 0s, 0s;
+        transition-property: opacity, translate, visibility, background-color;
+        translate: 0 var(--#{$table}__expandable-row--TranslateY);
 
-        &:where(:nth-child(n+2)) {
-          visibility: hidden;
-          opacity: var(--#{$table}__expandable-row--Opacity);
-          transition-delay: 0s, 0s, var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
-          transition-timing-function: var(--#{$table}__expandable-row--TransitionTimingFunction);
-          transition-duration: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--slide), 0s, 0s;
-          transition-property: opacity, translate, visibility, background-color;
-          translate: 0 var(--#{$table}__expandable-row--TranslateY);
-
-          &[hidden] {
-            display: var(--#{$table}__expandable-row--Display, revert);
-          }
-
-          &.pf-m-expanded {
-            visibility: visible;
-            opacity: var(--#{$table}__tbody--m-expanded__expandable-row--Opacity);
-            transition-delay: 0s;
-            transition-duration: var(--#{$table}__expandable-row--TransitionDuration--expand--fade), var(--#{$table}__expandable-row--TransitionDuration--expand--slide), 0s, 0s;
-            translate: 0 var(--#{$table}__tbody--m-expanded__expandable-row--TranslateY);
-
-            > :is(.#{$table}__td, .#{$table}__th) {
-              > .#{$table}__expandable-row-content {
-                max-height: 99999px;
-              }
-            }
-          }
-
-          &:not(.pf-m-expanded) {
-            > :is(.#{$table}__td, .#{$table}__th) {
-              &,
-              > .#{$table}__expandable-row-content {
-                padding: 0;
-                overflow: hidden;
-                transition-delay: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
-                transition-property: padding, max-height, overflow;
-              }
-
-              > .#{$table}__expandable-row-content {
-                max-height: 0;
-              }
-            }
-          }
-
-          // Remove top padding from regular expandable
-          // > :is(.#{$table}__th, .#{$table}__td) {
-          //   padding-block-start: 0;
-          // }
+        &[hidden] {
+          display: var(--#{$table}__expandable-row--Display, revert);
         }
+
+        &.pf-m-expanded {
+          visibility: visible;
+          opacity: var(--#{$table}__tbody--m-expanded__expandable-row--Opacity);
+          transition-delay: 0s;
+          transition-duration: var(--#{$table}__expandable-row--TransitionDuration--expand--fade), var(--#{$table}__expandable-row--TransitionDuration--expand--slide), 0s, 0s;
+          translate: 0 var(--#{$table}__tbody--m-expanded__expandable-row--TranslateY);
+
+          > :is(.#{$table}__td, .#{$table}__th) {
+            > .#{$table}__expandable-row-content {
+              max-height: 99999px;
+            }
+          }
+        }
+
+        &:not(.pf-m-expanded) {
+          > :is(.#{$table}__td, .#{$table}__th) {
+            &,
+            > .#{$table}__expandable-row-content {
+              padding: 0;
+              overflow: hidden;
+              transition-delay: var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
+              transition-property: padding, max-height, overflow;
+            }
+
+            > .#{$table}__expandable-row-content {
+              max-height: 0;
+            }
+          }
+        }
+
+        // Remove top padding from regular expandable
+        // > :is(.#{$table}__th, .#{$table}__td) {
+        //   padding-block-start: 0;
+        // }
       }
 
       // Add padding back to compound expandable
-      > .#{$table}__control-row ~ .#{$table}__expandable-row:where(:nth-child(n+2)).pf-m-expanded {
+      > .#{$table}__control-row ~ .#{$table}__expandable-row.pf-m-expanded {
         > :is(.#{$table}__th, .#{$table}__td):not(.pf-m-no-padding) {
           padding-block-start: var(--#{$table}--cell--PaddingBlockStart);
         }
@@ -1126,7 +1123,7 @@
 
   // - Table compact table tr
   tr:where(.#{$table}__tr) {
-    @at-root .#{$table}.pf-m-animate-expand.pf-m-compact > .#{$table}__tbody > .#{$table}__tr:not(.#{$table}__expandable-row:where(:nth-child(n+2))),
+    @at-root .#{$table}.pf-m-animate-expand.pf-m-compact > .#{$table}__tbody > .#{$table}__tr:not(.#{$table}__expandable-row),
     &:not(.#{$table}__expandable-row) {
       --#{$table}--cell--PaddingBlockStart: var(--#{$table}--m-compact--cell--PaddingBlockStart);
       --#{$table}--cell--PaddingBlockEnd: var(--#{$table}--m-compact--cell--PaddingBlockEnd);
