--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -384,8 +384,7 @@
   // stylelint-disable property-no-vendor-prefix
   -webkit-user-select: none;
   user-select: none;
-  // stylelint-enable property-no-vendor-prefix
-  background: var(--#{$button}--BackgroundColor) radial-gradient(circle, transparent 1%, color-mix(in srgb, currentcolor 15%, transparent) 1%) center/15000% 15000%;
+  background: var(--#{$button}--BackgroundColor);
   border: 0;
   border-start-start-radius: var(--#{$button}--BorderStartStartRadius, var(--#{$button}--BorderRadius));
   border-start-end-radius: var(--#{$button}--BorderStartEndRadius, var(--#{$button}--BorderRadius));
@@ -777,8 +776,7 @@
   }
 
   &:active {
-    background-size: 100% 100%; // apply the background surface for ripple
-    transition-duration: 0s; // transition immediately
+    background-color: color-mix(in srgb, currentcolor 15%, var(--#{$button}--BackgroundColor));
   }
 
   // Disabled buttons
