--- a/src/patternfly/components/CodeBlock/code-block.scss
+++ b/src/patternfly/components/CodeBlock/code-block.scss
@@ -30,7 +30,7 @@
     pointer-events: none;
     content: "";
     border: var(--#{$code-block}--BorderWidth) solid var(--#{$code-block}--BorderColor);
-    border-radius: var(--#{$code-block}--BorderRadius);
+    border-radius: inherit;
   }
 }
 
